src/parser/snapshots/monkey_language_server__parser__test__let_statement_broken_6_errors.snap
---
source: src/parser/test.rs
description: let a = @;42;
expression: "parser_errors(\"let a = @;42;\", errors)"
---
let a = @;42;
        ^ SyntaxError: Unexpected '@'.
